# remnawave-bedolaga-telegram-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  REDIS_ADMIN_INTEGRATION.md  REDIS_OPTIMIZATION.md  REDIS_SCALING_GUIDE.md  bedolaga.sh  docker-compose.yml  main.py  pyproject.toml  redis.conf  requirements.txt  test_redis_optimization.py
.github/workflows/: deploy.yml  docker-hub.yml  docker-registry.yml
app/: bot.py  config.py  constants.py  states.py
app/api/: __init__.py  main.py  server.py
app/database/: models.py  schema_health.py  universal_migration.py  utils.py
app/handlers/: __init__.py  balance.py  common.py  menu.py  referral.py  server_status.py  stars_payments.py  start.py  subscription.py  support.py
app/keyboards/: admin.py  inline.py
app/localization/: texts.py
app/middlewares/: display_name_restriction.py
app/services/: admin_notification_service.py  backup_service.py  broadcast_service.py  cart_topup_service.py  external_admin_api_keys_service.py  gdrive_service.py  monitoring_service.py  payment_service.py  poll_service.py  promo_group_assignment.py  promocode_service.py  redis_health_check.py  redis_service.py  referral_withdrawal_service.py  remnawave_service.py  subscription_auto_purchase_service.py  subscription_purchase_service.py  subscription_renewal_service.py  subscription_service.py  system_settings_service.py  trial_activation_service.py  (+4 more)
locales/: en.json  ru.json
miniapp/: index.html  index2.html
tests/: conftest.py  test_miniapp_payments.py  test_subscription_crud.py
webadmin/: index.html
(+103 files in other folders)
